--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@
 django==5.1.3
 
 # PostgreSQL adapter for Django
-#psycopg2-binary==2.9.6
+psycopg2-binary==2.9.10
 
 # Optional: Django REST Framework for building APIs
 djangorestframework==3.15.2
@@ -12,3 +12,5 @@ django-cors-headers==4.0.0
 
 # Optional: Other useful Django utilities
 django-environ==0.10.0   # For managing environment variables
+
+bcrypt
