--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     ports:
       - "8000:8000"
     environment:
-      - DATABASE_URL=postgres://postgres:Database!!@db:5432/fl_studio_projects
+      - DATABASE_URL=postgres://postgres:Database!!@54.210.73.155:5432/fl_studio_projects
     depends_on:
       - db
     volumes:
@@ -27,3 +27,4 @@ services:
       - POSTGRES_DB=fl_studio_projects
     ports:
       - "5432:5432"
+    restart: always
