--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,18 +1,13 @@
-FROM python:3.9-slim
-
-# Set the working directory
+FROM python:3.9-slim 
 WORKDIR /app
 
-# Copy requirements.txt and install dependencies
-COPY requirements.txt .
+# Copy requirements.txt from the root directory
+COPY ../requirements.txt .  
+
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy the rest of the project files
-COPY . .
-
-# Expose the port Django will run on
+COPY . .  # This copies the rest of the project files
 EXPOSE 8000
-
-# Run Django development server (change to production server in final setup)
 CMD ["python", "manage.py", "runserver", "0.0.0.0:8000"]
+
 
